{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 47,
  "lineage": "ec8d25a7-4c04-2b96-b91d-cdb5a75376fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "harish1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:666526592570:instance/i-072305628b475767a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072305628b475767a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3398f5770afb2d0",
            "private_dns": "ip-10-0-1-115.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.115",
            "public_ip": "34.228.38.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08bde044e8bf09bff",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080b7a463c9d65cc5",
            "tags": {
              "Name": "Harish-example2"
            },
            "tags_all": {
              "Name": "Harish-example2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b54519c225928ad7"
            ]
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "harish2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:666526592570:instance/i-0316f05e7de2442f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0316f05e7de2442f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0654243ba469f8cf6",
            "private_dns": "ip-10-1-1-133.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.133",
            "public_ip": "3.147.195.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008da9ef941d98653",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0870a53297dddeeeb",
            "tags": {
              "Name": "HarishInstance2"
            },
            "tags_all": {
              "Name": "HarishInstance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03232259259c7a760"
            ]
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002e24f07d9d506be",
            "arn": "arn:aws:ec2:us-east-1:666526592570:elastic-ip/eipalloc-002e24f07d9d506be",
            "association_id": "eipassoc-001bdf7648cac41cc",
            "domain": "vpc",
            "id": "eipalloc-002e24f07d9d506be",
            "network_border_group": "us-east-1",
            "network_interface": "eni-061faba660c85c398",
            "private_dns": "ip-10-0-1-162.ec2.internal",
            "private_ip": "10.0.1.162",
            "public_dns": "ec2-52-4-38-120.compute-1.amazonaws.com",
            "public_ip": "52.4.38.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666526592570:internet-gateway/igw-04d76dcf16b71c571",
            "id": "igw-04d76dcf16b71c571",
            "owner_id": "666526592570",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-052813909330112e7"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002e24f07d9d506be",
            "association_id": "eipassoc-001bdf7648cac41cc",
            "connectivity_type": "public",
            "id": "nat-0052bb0fced692aa9",
            "network_interface_id": "eni-061faba660c85c398",
            "private_ip": "10.0.1.162",
            "public_ip": "52.4.38.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-080b7a463c9d65cc5",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_eip.nat",
            "module.vpc_us_east_1.aws_internet_gateway.this",
            "module.vpc_us_east_1.aws_subnet.public",
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-085fbcbf600152ea11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0052bb0fced692aa9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-085fbcbf600152ea1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_eip.nat",
            "module.vpc_us_east_1.aws_internet_gateway.this",
            "module.vpc_us_east_1.aws_nat_gateway.this",
            "module.vpc_us_east_1.aws_route_table.private",
            "module.vpc_us_east_1.aws_subnet.public",
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04d76dcf16b71c571",
            "id": "r-rtb-0e6fcb8423472c37b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e6fcb8423472c37b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_internet_gateway.this",
            "module.vpc_us_east_1.aws_route_table.public",
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666526592570:route-table/rtb-085fbcbf600152ea1",
            "id": "rtb-085fbcbf600152ea1",
            "owner_id": "666526592570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0052bb0fced692aa9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052813909330112e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666526592570:route-table/rtb-0e6fcb8423472c37b",
            "id": "rtb-0e6fcb8423472c37b",
            "owner_id": "666526592570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d76dcf16b71c571",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-052813909330112e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082adb35c38765842",
            "route_table_id": "rtb-085fbcbf600152ea1",
            "subnet_id": "subnet-0065f119f31b11d59"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_route_table.private",
            "module.vpc_us_east_1.aws_subnet.private",
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b699e8fb2320076",
            "route_table_id": "rtb-085fbcbf600152ea1",
            "subnet_id": "subnet-0f046fdb005e37307"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_route_table.private",
            "module.vpc_us_east_1.aws_subnet.private",
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072c6fa373b3933b5",
            "route_table_id": "rtb-0e6fcb8423472c37b",
            "subnet_id": "subnet-080b7a463c9d65cc5"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_route_table.public",
            "module.vpc_us_east_1.aws_subnet.public",
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097095b70fca58e41",
            "route_table_id": "rtb-0e6fcb8423472c37b",
            "subnet_id": "subnet-0f6b4182a71b4e4a3"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_route_table.public",
            "module.vpc_us_east_1.aws_subnet.public",
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666526592570:subnet/subnet-0065f119f31b11d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0065f119f31b11d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666526592570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-052813909330112e7"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666526592570:subnet/subnet-0f046fdb005e37307",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f046fdb005e37307",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666526592570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-052813909330112e7"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666526592570:subnet/subnet-080b7a463c9d65cc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080b7a463c9d65cc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "666526592570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-052813909330112e7"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666526592570:subnet/subnet-0f6b4182a71b4e4a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6b4182a71b4e4a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "666526592570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-1-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-052813909330112e7"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.this",
            "module.vpc_us_east_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666526592570:vpc/vpc-052813909330112e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0220dc261885729cc",
            "default_route_table_id": "rtb-094d889e698b5abb3",
            "default_security_group_id": "sg-0b54519c225928ad7",
            "dhcp_options_id": "dopt-0e7e67388506c6fd1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052813909330112e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094d889e698b5abb3",
            "owner_id": "666526592570",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-1",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0851d087a08b661c1",
            "arn": "arn:aws:ec2:us-east-2:666526592570:elastic-ip/eipalloc-0851d087a08b661c1",
            "association_id": "eipassoc-08e84e9c74bc332d5",
            "domain": "vpc",
            "id": "eipalloc-0851d087a08b661c1",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0295538c2f64f79ba",
            "private_dns": "ip-10-1-1-89.us-east-2.compute.internal",
            "private_ip": "10.1.1.89",
            "public_dns": "ec2-18-219-182-208.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.182.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666526592570:internet-gateway/igw-065b8ed036ed4fc67",
            "id": "igw-065b8ed036ed4fc67",
            "owner_id": "666526592570",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09cbe241ab3a92bc4"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0851d087a08b661c1",
            "association_id": "eipassoc-08e84e9c74bc332d5",
            "connectivity_type": "public",
            "id": "nat-066df26033070cd4f",
            "network_interface_id": "eni-0295538c2f64f79ba",
            "private_ip": "10.1.1.89",
            "public_ip": "18.219.182.208",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0870a53297dddeeeb",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_eip.nat",
            "module.vpc_us_east_2.aws_internet_gateway.this",
            "module.vpc_us_east_2.aws_subnet.public",
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c8d0a2f7d7b74651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-066df26033070cd4f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c8d0a2f7d7b7465",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_2.aws_eip.nat",
            "module.vpc_us_east_2.aws_internet_gateway.this",
            "module.vpc_us_east_2.aws_nat_gateway.this",
            "module.vpc_us_east_2.aws_route_table.private",
            "module.vpc_us_east_2.aws_subnet.public",
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-065b8ed036ed4fc67",
            "id": "r-rtb-04cfb2f6c82041f881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04cfb2f6c82041f88",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_2.aws_internet_gateway.this",
            "module.vpc_us_east_2.aws_route_table.public",
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666526592570:route-table/rtb-01c8d0a2f7d7b7465",
            "id": "rtb-01c8d0a2f7d7b7465",
            "owner_id": "666526592570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-066df26033070cd4f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cbe241ab3a92bc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666526592570:route-table/rtb-04cfb2f6c82041f88",
            "id": "rtb-04cfb2f6c82041f88",
            "owner_id": "666526592570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065b8ed036ed4fc67",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cbe241ab3a92bc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05199eafbfdfa91e7",
            "route_table_id": "rtb-01c8d0a2f7d7b7465",
            "subnet_id": "subnet-02c23edfade3ebd70"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_route_table.private",
            "module.vpc_us_east_2.aws_subnet.private",
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b723af36c53a74a",
            "route_table_id": "rtb-01c8d0a2f7d7b7465",
            "subnet_id": "subnet-0e390e846b8db6cbc"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_route_table.private",
            "module.vpc_us_east_2.aws_subnet.private",
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0955b3d7b7c7d38f4",
            "route_table_id": "rtb-04cfb2f6c82041f88",
            "subnet_id": "subnet-0870a53297dddeeeb"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_route_table.public",
            "module.vpc_us_east_2.aws_subnet.public",
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc212450fe042d5d",
            "route_table_id": "rtb-04cfb2f6c82041f88",
            "subnet_id": "subnet-0b2ff85249e93bf39"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_route_table.public",
            "module.vpc_us_east_2.aws_subnet.public",
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666526592570:subnet/subnet-02c23edfade3ebd70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c23edfade3ebd70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666526592570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09cbe241ab3a92bc4"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666526592570:subnet/subnet-0e390e846b8db6cbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e390e846b8db6cbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666526592570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09cbe241ab3a92bc4"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666526592570:subnet/subnet-0870a53297dddeeeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0870a53297dddeeeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "666526592570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09cbe241ab3a92bc4"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666526592570:subnet/subnet-0b2ff85249e93bf39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2ff85249e93bf39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "666526592570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-2-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-09cbe241ab3a92bc4"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.this",
            "module.vpc_us_east_2.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:666526592570:vpc/vpc-09cbe241ab3a92bc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-00326df82e9198fda",
            "default_route_table_id": "rtb-02a9ecd163b386983",
            "default_security_group_id": "sg-03232259259c7a760",
            "dhcp_options_id": "dopt-09716ffa2734a7be1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09cbe241ab3a92bc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a9ecd163b386983",
            "owner_id": "666526592570",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-us-east-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-us-east-2",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}